--- a/WebAP_Net lập lại từ đầu/WebBanHang/WebBanHang/Views/Home/ThemDanhMuc.cshtml
+++ b/WebAP_Net lập lại từ đầu/WebBanHang/WebBanHang/Views/Home/ThemDanhMuc.cshtml
@@ -1,4 +1,5 @@
-﻿
+﻿@model string
+    
 @{
     Layout = null;
 }
@@ -8,10 +9,11 @@
 <html>
 <head>
     <meta name="viewport" content="width=device-width" />
-    <title>Thêm Danh Mục</title>
+    <title>ThemDanhMuc</title>
 </head>
 <body>
-    <div> 
+    <div>
+        <h1>Tên danh mục nhập vào: @{Model} </h1>
     </div>
 </body>
 </html>
