--- a/WebAP_Net lập lại từ đầu/WebBanHang/WebBanHang/Views/Home/Index.cshtml
+++ b/WebAP_Net lập lại từ đầu/WebBanHang/WebBanHang/Views/Home/Index.cshtml
@@ -46,9 +46,9 @@
                 <!-- Phần action thì sẽ điền link đến phần Controller và Action nhận dữ liệu. -->
                 <form action="~/Home/ThemDanhMuc" method="POST">
 
-                    <input type="text" placeholder="Nhập tên danh mục" name="TenDM" value="DANG VAN DOAN"/>
-                    @*<br />
-                    <input type="text" placeholder="Nhập mô tả" name="MoTa"/>*@
+                    <input type="text" placeholder="Nhập tên danh mục" name="TenDM" />
+                    <br />
+                    <input type="text" placeholder="Nhập mô tả" name="MoTa"/>
                     <button type="submit" class="btn btn-default">Thêm mới</button>
                 </form>
             </div>
