--- a/WebAP_Net lập lại từ đầu/WebBanHang/WebBanHang/Views/Home/CapNhatDanhMuc.cshtml
+++ b/WebAP_Net lập lại từ đầu/WebBanHang/WebBanHang/Views/Home/CapNhatDanhMuc.cshtml
@@ -76,9 +76,9 @@
 
                 <h1>Sửa Danh Mục </h1>
                 <!-- Phần action thì sẽ điền link đến phần Controller và Action nhận dữ liệu. -->
-                <form action="" method="POST">  
+                <form action="~/Home/SuaDanhMuc" method="POST">  
 
-                    <input type="text" placeholder= "@Model.ID" name="ID"  />
+                    <input type="text" placeholder= "@Model.ID" name="idDanhMuc"  />
                     <br />
                     <input type="text"  placeholder= "@Model.TENDM"  name="TenDMMoi"  />
                     <br />
@@ -86,6 +86,7 @@
                     <button type="submit" class="btn btn-default">Sửa danh mục.</button>
                     <br />
                     <a href="~/Home/Index">Quay về trang chủ</a>
+
                 </form>
             </div>
         </div>
