--- a/WebAPNet truyền nhiều tham số/WebBanHang/css/Category.css
+++ b/WebAPNet truyền nhiều tham số/WebBanHang/css/Category.css
@@ -121,7 +121,7 @@ table {
 
 .sua-danh-muc {
     margin-left:20px;
-    background-color: red;
+    background-color: #a2dce9;
     width: 20%;
     padding: 30px 0 0 12px;
 }
