--- a/WebAPNet truyền nhiều tham số/WebBanHang/Views/VaiTroTV/Index.cshtml
+++ b/WebAPNet truyền nhiều tham số/WebBanHang/Views/VaiTroTV/Index.cshtml
@@ -38,8 +38,7 @@
                         <li><a href="">Tất cả thành viên</a></li>
                         <li><a href="">Thêm thành viên</a></li>
                         <li><a href="">Hồ sơ của bạn</a></li>
-                        <li><a href="~/VaiTroTV/Index">Vai trò thành viên</a></li>
-                        <!-- Lỗi chưa có tham số vào cho View này. -->
+                        <li><a href="">Vai trò thành viên</a></li>
                     </ul>
                 </li>
             </ul>
@@ -118,27 +117,27 @@
 
     @section scripts {
         <script>
-                        //function xoa() {
-                        //    if (confirm('Bạn có chắc chắn muốn xóa?')) {
-                        //        // Thực hiện hành động xóa ở đây (ví dụ: gọi một hàm AJAX để gửi yêu cầu xóa đến server)
-                        //        $.ajax({
-                        //            url: '/Home/XoaDanhMuc',
-                        //            data: { id: 123 }, // Gửi ID của bản ghi cần xóa
-                        //            success: function (result) {
-                        //                // Xử lý kết quả trả về từ server
-                        //                alert('Xóa thành công!');
-                        //            },
-                        //            error: function (error)
-                        //                // Xử lý lỗi
-                        //                alert('Có lỗi xảy ra!');
-                        //            }
-                        //        });
-                        //    }
-                        //}
-                        ////var XoaDanhMuc = function (idDanhMuc) {
-                        //    if (confirm("Bạn  chắc chắn muốn xóa danh mục có ID= " + idDanhMuc + " hay không?") == true) {
-                        //        location.href = "/Home/XoaDanhMuc?idDanhMuc=" + idDanhMuc
-                        //    }
+                                    //function xoa() {
+                                    //    if (confirm('Bạn có chắc chắn muốn xóa?')) {
+                                    //        // Thực hiện hành động xóa ở đây (ví dụ: gọi một hàm AJAX để gửi yêu cầu xóa đến server)
+                                    //        $.ajax({
+                                    //            url: '/Home/XoaDanhMuc',
+                                    //            data: { id: 123 }, // Gửi ID của bản ghi cần xóa
+                                    //            success: function (result) {
+                                    //                // Xử lý kết quả trả về từ server
+                                    //                alert('Xóa thành công!');
+                                    //            },
+                                    //            error: function (error)
+                                    //                // Xử lý lỗi
+                                    //                alert('Có lỗi xảy ra!');
+                                    //            }
+                                    //        });
+                                    //    }
+                                    //}
+                                    ////var XoaDanhMuc = function (idDanhMuc) {
+                                    //    if (confirm("Bạn  chắc chắn muốn xóa danh mục có ID= " + idDanhMuc + " hay không?") == true) {
+                                    //        location.href = "/Home/XoaDanhMuc?idDanhMuc=" + idDanhMuc
+                                    //    }
 
         </script>
     }
@@ -147,4 +146,5 @@
 
 </body>
 </html>
+
 
